# pacwars2

./: INSTALL  Makefile.am  NEWS  aclocal.m4  configure  configure.in  mkinstalldirs  pw2.kdevprj  pw2.spec.in  readme.md
doc/: changes.txt  scripting.txt  sdlhacks.txt  todo.txt
include/: SDL.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_image.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_main.h  SDL_mouse.h  SDL_mutex.h  SDL_quit.h  SDL_rwops.h  SDL_syswm.h  SDL_thread.h  SDL_timer.h  SDL_types.h  SDL_version.h  SDL_video.h  _readme.txt  deflate.h  zconf.h  zutil.h
src/: Makefile.am  _bldnum.h  aibase.cpp  aibase.h  bldnum.cpp  bldnum.h  bot.cpp  bot.h  chat.cpp  chat.h  client.cpp  client.h  config.cfg  const.cpp  const.h  cvar.cpp  cvar.h  game.cpp  game.h  gamedefs.h  gmath.cpp  gmath.h  gui.h  gvars.cpp  gvars.h  map.cpp  map.h  mapi.cpp  mapi.h  mapman.cpp  mapman.h  messenger.cpp  messenger.h  mouse.cpp  mouse.h  net.cpp  net.h  oapi.cpp  oapi.h  osdep.cpp  (+46 more)
src/console/: Makefile.am  SDL_Console.cpp  SDL_Console.h  SDL_ConsoleCommands.cpp  SDL_ConsoleCommands.h  SDL_DrawText.cpp  SDL_DrawText.h  info.txt  readme.txt
src/gui/: Makefile.am  gui.cpp  gui.h  gui_ori.h  guibasemenu.cpp  guibasemenu.h  guiclientmenu.cpp  guiclientmenu.h  guicreateplayermenu.cpp  guicreateplayermenu.h  guicreateplayerselmenu.cpp  guicreateplayerselmenu.h  guicreditsmenu.cpp  guicreditsmenu.h  guideleteplayermenu.cpp  guideleteplayermenu.h  guijoingamemenu.cpp  guijoingamemenu.h  guimainmenu.cpp  guimainmenu.h  guinewgamemenu.cpp  guinewgamemenu.h  guioptionsmenu.cpp  guioptionsmenu.h  guipathsmenu.cpp  guipathsmenu.h  guiredefinekeysmenu.cpp  guiredefinekeysmenu.h  guiresultsmenu.cpp  guiresultsmenu.h  guiservermenu.cpp  guiservermenu.h  guisoundmenu.cpp  guisoundmenu.h  guivideomenu.cpp  guivideomenu.h  guiyndialog.cpp  guiyndialog.h
src/pathlib/: Makefile.am  heap.c  heap.h  pathlib.c  pathlib.h  types.h
src/seer/: Instance.c  Makefile.am  Pmem.c  README.TXT  Script.c  Vcpucode.c  Vcpudeco.c  callasm.c  code.h  compiler.c  consts.c  declare.c  dict.c  expr.c  fixed.h  headers.c  initial.c  internal.h  parser.c  preproc.c  protect.c  seer.h  vars.c
