dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

PW2_VERSION=1.1.0

dnl The minimum SDL version required
SDL_VERSION=1.1.7

dnl The minimum ParaGUI version required
PARAGUI_VERSION=0.6.5

dnl Setup for automake
AM_INIT_AUTOMAKE(pw2, $PW2_VERSION)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl Check for tools

AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET
dnl AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_EXEEXT

dnl set default prefix

ac_default_prefix=/usr/local/games/pw2

dnl Check for SDL

AM_PATH_SDL($SDL_VERSION,
            :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)


dnl Check for SDL_ttf

have_SDL_ttf_lib=no
have_SDL_ttf_include=no

AC_CHECK_LIB(SDL_ttf, TTF_Init, have_SDL_ttf_lib=yes)

if test x$have_SDL_ttf_lib = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_ttf library !])
fi

AC_CHECK_HEADER(SDL_ttf.h, [have_SDL_ttf_include=yes])

if test x$have_SDL_ttf_include = xno; then
    AC_CHECK_HEADER(SDL/SDL_ttf.h, [have_SDL_ttf_include=yes])
fi

if test x$have_SDL_ttf_include = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_ttf headers !])
fi

have_SDL_image_lib=no
have_SDL_image_include=no

AC_CHECK_LIB(SDL_image, IMG_Load, have_SDL_image_lib=yes)

if test x$have_SDL_image_lib = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_image library !])
fi

AC_CHECK_HEADER(SDL_image.h, [have_SDL_image_include=yes])

if test x$have_SDL_image_include = xno; then
    AC_CHECK_HEADER(SDL/SDL_image.h, [have_SDL_image_include=yes])
fi

if test x$have_SDL_image_include = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_image headers !])
fi

dnl Check for freetype

have_freetype=no
AC_CHECK_LIB(ttf, TT_Init_FreeType, have_freetype=yes)
if test x$have_freetype = xno; then
    AC_MSG_ERROR([*** Unable to find FreeType library (http://www.freetype.org/)])
fi

AM_PATH_PARAGUI($PARAGUI_VERSION,
            :,
            AC_MSG_ERROR([*** PARAGUI version $PARAGUI_VERSION not found!])
)

AM_CONFIG_HEADER(config.h)

CXXFLAGS="$CFLAGS -frtti"

AC_SUBST(CXXFLAGS)

# Finally create all the generated files
AC_OUTPUT([
Makefile
src/Makefile
src/console/Makefile
src/seer/Makefile
src/gui/Makefile
bin/Makefile
bin/gfx/Makefile
bin/gfx/game/Makefile
bin/gfx/gui/Makefile
bin/gfx/gui/fonts/Makefile
bin/gfx/gui/menu/Makefile
bin/gfx/skins/Makefile
bin/gfx/sprites/Makefile
bin/maps/Makefile
bin/scripts/Makefile
bin/snd/Makefile
pw2.spec
])

