dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

PW2_VERSION=1.2.0

dnl The minimum SDL version required
SDL_VERSION=1.2.0

dnl The minimum ParaGUI version required
PARAGUI_VERSION=0.7.0

dnl Setup for automake
AM_INIT_AUTOMAKE(pw2, $PW2_VERSION)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl Check for tools

AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AC_PROG_MAKE_SET
dnl AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_EXEEXT

dnl set default prefix

ac_default_prefix=/usr/local/games/pw2
EX_LIBS=""

case "$target" in
    *-*-cygwin* | *-*-mingw32*)
        AM_INIT_AUTOMAKE(xmingw32msvc-paragui, $PARAGUI_VERSION)
        if test "$build" != "$target"; then # cross-compiling
            # Default cross-compile location
            ac_default_prefix=/usr/local/cross-tools/i386-mingw32msvc
        else
            # Look for the location of the tools and install there
            ac_default_prefix=$BUILD_PREFIX
        fi
        ;;
    alpha*-*-linux*)
        CFLAGS="$CFLAGS -mcpu=ev4 -Wa,-mall"
        ;;
    *-*-beos*)
        ac_default_prefix=/boot/home/pw2
	EX_LIBS="-lz"
        ;;
esac 

AC_SUBST(EX_LIBS)

dnl Check for SDL

AM_PATH_SDL($SDL_VERSION,
            :,
	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

SDL_PREFIX=`sdl-config --prefix`
AC_SUBST(SDL_PREFIX)


dnl Check for SDL_ttf

have_SDL_ttf_lib=no
have_SDL_ttf_include=no

AC_CHECK_LIB(SDL_ttf, TTF_Init, have_SDL_ttf_lib=yes)

if test x$have_SDL_ttf_lib = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_ttf library !])
fi

AC_CHECK_HEADER($SDL_PREFIX/include/SDL/SDL_ttf.h, [have_SDL_ttf_include=yes])

if test x$have_SDL_ttf_include = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_ttf headers !])
fi


dnl Check for SDL_image

have_SDL_image_lib=no
have_SDL_image_include=no

AC_CHECK_LIB(SDL_image, IMG_Load, have_SDL_image_lib=yes)

if test x$have_SDL_image_lib = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_image library !])
fi

AC_CHECK_HEADER($SDL_PREFIX/include/SDL/SDL_image.h, [have_SDL_image_include=yes])

if test x$have_SDL_image_include = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_image headers !])
fi


dnl Check for SDL_net

have_SDL_net_lib=no
have_SDL_net_include=no

AC_CHECK_LIB(SDL_net, SDLNet_Init, have_SDL_net_lib=yes)

if test x$have_SDL_net_lib = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_net library !])
fi

AC_CHECK_HEADER($SDL_PREFIX/include/SDL/SDL_net.h, [have_SDL_net_include=yes])

if test x$have_SDL_net_include = xno; then
    AC_MSG_ERROR([*** Unable to find SDL_net headers !])
fi


dnl Check for freetype

have_freetype=no
AC_CHECK_LIB(ttf, TT_Init_FreeType, have_freetype=yes)
if test x$have_freetype = xno; then
    AC_MSG_ERROR([*** Unable to find FreeType library (http://www.freetype.org/)])
fi


dnl ParaGUI checks

AM_PATH_PARAGUI($PARAGUI_VERSION,
            :,
            AC_MSG_ERROR([*** PARAGUI version $PARAGUI_VERSION not found!])
)

PG_LPREFIX=`paragui-config --prefix`/lib
SDL_LPREFIX=`sdl-config --prefix`/lib


AM_CONFIG_HEADER(config.h)

CXXFLAGS="$CFLAGS -fno-exceptions"

use_static_libs=no

dnl AC_ARG_ENABLE(shared,
dnl [  --enable-shared         Enable linking with shared libaries [default=no]],
dnl              , use_static_libs=yes)

if test x$use_static_libs = xyes; then
    STATIC_LIBS="$SDL_LPREFIX/libSDL_mixer.a $SDL_LPREFIX/libSDL.a $SDL_LPREFIX/libSDLmain.a $SDL_LPREFIX/libSDL_ttf.a $SDL_LPREFIX/libSDL_image.a $SDL_LPREFIX/libSDL_net.a $PG_LPREFIX/libparagui.a -lpthread $SDL_LPREFIX/libttf.a -lX11 -lXxf86dga -lXxf86vm -lXext -lXv -L/usr/X11R6/lib -lesd -ljpeg -lpng -lz -ldl"
else
    STATIC_LIBS="-lSDL_mixer $PARAGUI_LIBS -lSDL_net -lSDL_image $EX_LIBS"
fi

AC_SUBST(STATIC_LIBS)
AC_SUBST(CXXFLAGS)

# Finally create all the generated files
AC_OUTPUT([
Makefile
src/Makefile
src/console/Makefile
src/seer/Makefile
src/gui/Makefile
src/pathlib/Makefile
bin/Makefile
bin/gfx/Makefile
bin/gfx/game/Makefile
bin/gfx/gui/Makefile
bin/gfx/gui/fonts/Makefile
bin/gfx/gui/default/Makefile
bin/gfx/gui/qnx/Makefile
bin/gfx/gui/woid/Makefile
bin/gfx/skins/Makefile
bin/gfx/sprites/Makefile
bin/maps/Makefile
bin/scripts/Makefile
bin/snd/Makefile
pw2.spec
])

