
INCLUDES = $(PARAGUI_CFLAGS) -I.. -I../console

noinst_LTLIBRARIES = libgui.la

libgui_la_SOURCES = \
	gui.cpp \
	guibasemenu.cpp \
	guisoundmenu.cpp \
	guinewgamemenu.cpp \
	guiservermenu.cpp \
	guiclientmenu.cpp \
	guivideomenu.cpp

EXTRA_DIST = \
	gui.h \
	guibasemenu.h \
	guisoundmenu.h \
	guinewgamemenu.h \
	guiservermenu.h \
	guiclientmenu.h \
	guivideomenu.h
