
INCLUDES = $(PARAGUI_CFLAGS) -I.. -I../console

noinst_LTLIBRARIES = libgui.la

libgui_la_SOURCES = \
	gui.cpp \
	guibasemenu.cpp \
	guisoundmenu.cpp \
	guinewgamemenu.cpp \
	guiservermenu.cpp \
	guiclientmenu.cpp \
	guivideomenu.cpp \
	guipathsmenu.cpp \
	guimainmenu.cpp \
	guioptionsmenu.cpp \
	guijoingamemenu.cpp \
	guicreditsmenu.cpp \
	guicreateplayermenu.cpp

EXTRA_DIST = \
	gui.h \
	guibasemenu.h \
	guisoundmenu.h \
	guinewgamemenu.h \
	guiservermenu.h \
	guiclientmenu.h \
	guivideomenu.h \
	guipathsmenu.h \
	guimainmenu.h \
	guioptionsmenu.h \
	guijoingamemenu.h \
	guicreditsmenu.h \
	guicreateplayermenu.h
