
INCLUDES = $(PARAGUI_CFLAGS) -I.. -I../console

noinst_LTLIBRARIES = libgui.la

libgui_la_SOURCES = \
	gui.cpp \
	guibasemenu.cpp \
	guisoundmenu.cpp \
	guinewgamemenu.cpp \
	guiservermenu.cpp \
	guiclientmenu.cpp \
	guivideomenu.cpp \
	guipathsmenu.cpp \
	guimainmenu.cpp \
	guioptionsmenu.cpp \
	guijoingamemenu.cpp \
	guicreditsmenu.cpp \
	guicreateplayermenu.cpp \
	guideleteplayermenu.cpp \
	guiresultsmenu.cpp \
	guicreateplayerselmenu.cpp \
	guiyndialog.cpp \
	guiredefinekeysmenu.cpp

EXTRA_DIST = \
	gui.h \
	guibasemenu.h \
	guisoundmenu.h \
	guinewgamemenu.h \
	guiservermenu.h \
	guiclientmenu.h \
	guivideomenu.h \
	guipathsmenu.h \
	guimainmenu.h \
	guioptionsmenu.h \
	guijoingamemenu.h \
	guicreditsmenu.h \
	guicreateplayermenu.h \
	guideleteplayermenu.h \
	guiresultsmenu.h \
	guicreateplayerselmenu.h \
	guiyndialog.h \
	guiredefinekeysmenu.h


