
noinst_LIBRARIES = libseer.a

libseer_a_SOURCES = \
	Pmem.c \
	Vcpucode.c \
	declare.c \
	protect.c \
	Instance.c \
	Vcpudeco.c \
	compiler.c \
	dict.c \
	headers.c \
	parser.c \
	Script.c \
	callasm.c \
	consts.c \
	expr.c \
	initial.c \
	preproc.c \
	vars.c

EXTRA_DIST = \
	internal.h \
	code.h \
	fixed.h \
	seer.h \
	README.TXT
